selfhost/test/typechecker/bindingdecl/error_unfilled_holes.out
Error at %FILE_NAME%:1:15
Could not determine type for assignment
  |  val x = Option.None_
                   ^
Type '<unknown>?' has unfilled holes. Please use an explicit type annotation to denote the type
