selfhost/test/typechecker/bindingdecl/error_unfilled_holes.abra
val x = Option.None_